syntax = "proto3";

import "google/api/annotations.proto";
import "mwitkow/go-proto-validators/validator.proto";

import "task.payload.proto";

package task.service.v1;
option go_package = "./pb";

service TaskService {
    rpc HealthCheck(Empty) returns (HealthCheckResponse) {
        option (google.api.http) = {
            get: "/api/v1/health-check"
        };
    };

    rpc SaveTaskWithData(SaveTaskRequest) returns (SaveTaskResponse) {};

    rpc SetTask(SetTaskRequest) returns (SetTaskResponse) {
        option (google.api.http) = {
            put: "/api/v1/task/{taskID}"
            body: "*"
        };
    };

}

