syntax = "proto3";

import "google/api/field_behavior.proto";

import "task.gorm_db.proto";

package task.service.v1;
option go_package = "./pb";

import "mwitkow/go-proto-validators/validator.proto";

message LoginRequest {
    string username = 1 [(validator.field) = {msg_exists : true}];
    string password = 2 [(validator.field) = {msg_exists : true}];
}

message LoginResponse {
    string access_token = 1;
}

message HealthCheckResponse {
    string message = 1;
}

message Empty {}

message InvalidKeyError {
    string key = 1;
    string message = 2;
}

message SaveTaskRequest {
    uint64 taskID = 1;
    string action = 2;
    Task task = 3 [(google.api.field_behavior) = OPTIONAL];
    string data = 4 [(google.api.field_behavior) = OPTIONAL];
}

message SaveTaskResponse {
    bool success = 1;
}

message SetTaskRequest {
    uint64 taskID = 1;
    string action = 2;
}

message SetTaskResponse {
    bool error = 1;
    uint32 code = 2;
    string message = 3;
    Task data = 5;
}